@@ -176,6 +176,13 @@ shield:
     # If you want to disable this, just set the value to 0.
     shield_surrender_time: 4d
 
+    # Give a shield to the land that surrendered before the war even started.
+    declaration:
+      # Only give the shield, if they paid at least the specified amount of money as a tribute.
+      min-tribute: 1000
+      # Set to 0, to disable this shield.
+      shield_declaration_time: 1d
+
     # Set a war shield for both parties after war?
     # If you want to disable this, just set the value to 0.
     shield_end_time: 7d
